# SaltPy

./: LICENSE  README.md  UTM_grid_install.py  processing_examples.ipynb  public.py  pyproject.toml
deprecated/: saltpy_public-0.0.0a0-py3-none-any.whl  saltpy_public-0.0.2a0-py3-none-any.whl  saltpy_public-0.0.3a0-py3-none-any.whl  saltpy_public-0.0.4a0-py3-none-any.whl  saltpy_public-0.0.5a0-py3-none-any.whl
docs/: index.md
docs/examples/: wireframe-EXAMPLE.md  wireframe-simple-EXAMPLE.md
docs/setup/: installation.md
env/: environment.yml
examples/: 01_200708.gpkg  02_200206.gpkg  Processing_Examples.ipynb  full_cave_mesh.stl  mesh_example_simple.ipynb
examples/.ipynb_checkpoints/: Processing_Examples-checkpoint.ipynb  Processing_ExamplesFix-checkpoint.ipynb  mesh_example-checkpoint.ipynb  mesh_example_simple-checkpoint.ipynb
examples/data/: example_dmv_export.csv  example_lwt.lwt
src/: __init__.py  public.py  saltpy_public.py
src/SaltPy.egg-info/: PKG-INFO  SOURCES.txt
src/saltpy_public.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
