[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltpy-public"
version = "0.0.0a"
description = "SaltPy Open-Source Sonar Survey Processing for Solution-Mined Caverns"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Matthew W. Bauer, PG", email = "bauer@agapito.com"},
]
keywords = ["salt", "caverns", "solution mining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/AgapitoInc/SaltPy"